assets/css/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body {
    @apply text-gray-600 dark:text-gray-300 bg-white dark:bg-gray-900;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply text-gray-900 dark:text-gray-200 font-display;
  }
  h1 {
    @apply text-2xl sm:text-3xl font-bold tracking-tight;
  }
  h2 {
    @apply text-xl sm:text-2xl font-bold tracking-tight;
  }
  h3 {
    @apply text-lg sm:text-xl font-bold tracking-tight;
  }

/* -----------------------
   Header
----------------------- */
.header-wrapper {
  @apply fixed bottom-0 sm:bottom-auto w-full z-50 transition-all duration-300 border-t md:border-t-0 md:border-b md:py-2 dark:border-gray-700/75 bg-white/75 dark:bg-gray-900/75 backdrop-blur ;
}
.header{
    @apply flex sm:justify-between sm:items-center container mx-auto flex-col-reverse sm:flex-row
}
.header-content{
    @apply flex items-center justify-between px-4 py-3 sm:p-0;
}
/* -----------------------
  Navigation
----------------------- */
.navbar{
  @apply  px-2 transform sm:flex sm:bg-transparent transition-all duration-100 ease-linear pt-5 sm:pt-0;
}
.navbar-toggle{
   @apply block dark:text-gray-100 focus:text-primary-500 focus:outline-none focus:bg-gray-100 dark:focus:bg-gray-800 p-2 rounded-md transition-all duration-300
}
.navbar-link{
    @apply py-[2px] px-4 rounded-lg sm:mt-0 sm:ml-2 w-full sm:w-auto inline-flex sm:flex-row items-center flex-row-reverse hover:bg-gray-100 dark:hover:bg-gray-800 transition-all duration-300;
}

.container {
    @apply mx-auto sm:px-6 lg:px-8 px-4 max-w-7xl;
    /* @apply md:max-w-5xl lg:max-w-6xl;
     */
}
.section {
    @apply py-12;
    @apply px-6;
}
.section-heading {
    @apply text-center;
    @apply leading-tight;
}
.section-description {
    @apply text-center;
}
.btn {
    @apply rounded-lg;
    @apply px-5;
    @apply py-3;
    @apply leading-tight;
    @apply transition-all duration-300
}

  .form-control {
    @apply bg-gray-100 dark:bg-gray-800 rounded-lg border dark:border-gray-700 focus:outline-none focus:border-gray-400 text-base px-4 py-2 w-full;
  }
  .content a:not(.btn) {
    @apply text-primary-500;
    box-shadow: inset 0 -0.1666666667em 0 0 #7dd3fc,
      inset 0 -0.3333333333em 0 0 #38bdf8;
  }
  .content > pre {
    @apply rounded-2xl;
    overflow: auto;
    scrollbar-width: none;
  }
  .entry-sticky-shares {
    @apply border dark:border-gray-600/75 rounded-lg backdrop-blur bg-white/75 dark:bg-gray-900/75;
  }
  .logo-path {
    @apply fill-[#0f172a] dark:fill-[#f8fafc];
  }
  .logo-circle {
    @apply fill-[#0ea5e9];
  }
}
nav .nuxt-link-active:not(.btn) {
  @apply text-primary-500;
}
.content > :first-child {
  margin-top: 0;
}
.content p,
.content h3,
.content h4,
.content h5,
.content h6 {
  margin-bottom: 1.25em;
  margin-top: 1.25em;
}

.entry-sticky-shares {
  position: relative;
  z-index: 1;
  padding: 15px;
  text-align: center;
  top: 0;
  left: 0;
  width: 100%;
  margin-top: 2rem;
}
.entry-shares {
  display: inline-flex;
  align-items: center;
  justify-content: space-between;
  justify-items: end;
  flex-wrap: wrap;
  flex-grow: inherit;
  width: 100%;
}
.entry-sticky-shares ul li.share-sum {
  font-size: 18px;
  margin-bottom: 0;
  line-height: 1.2;
  display: inline-block;
}
.entry-sticky-shares ul li a {
  font-size: 26px;
  width: 50px;
  height: 50px;
  display: inline-flex;
  -moz-box-align: center;
  align-items: center;
  -moz-box-pack: center;
  justify-content: center;
}
.entry-sticky-shares ul li a svg {
  max-width: 26px;
  height: 100%;
  max-height: 26px;
  pointer-events: none;
}
.entry-sticky-shares .icon-twitter {
  fill: #1da1f2;
}
.entry-sticky-shares .icon-facebook {
  fill: #1778f2;
}
.entry-sticky-shares .icon-linkedin {
  fill: #0077b5;
}

.btn-primary {
  @apply bg-primary-500 hover:bg-primary-600 border border-primary-400  text-white hover:text-primary-50;
}

.btn-success {
  @apply bg-green-500 hover:bg-green-600 border border-green-400  text-green-50;
}
.btn-danger {
  @apply bg-red-500 hover:bg-red-600 border border-red-400  text-red-50;
}
.btn-secondary {
  @apply bg-gray-100 hover:bg-gray-200 border dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-900 text-gray-500 dark:text-gray-100 ;
}

/* -----------------------
  Index Page
----------------------- */
.globe-item{
    @apply blur-3xl;
}

.globe-item:nth-child(1){
   animation: blob 5s ease infinite;
}

.globe-item:nth-child(2){
   animation: blob 5s ease infinite 1s;
}

.globe-item:nth-child(3){
   animation: blob 5s ease infinite 2s;
}

.globe-item:nth-child(4){
   animation: blob 5s ease infinite 3s;
}

@keyframes blob {
    0% {
        transform: scale(1) translate(0);
    }
    33% {
        transform: scale(1.1) translate(20px,20px);
    }
    66% {
        transform: scale(.9) translate(-20px,-20px);
    }
    100% {
        transform: scale(1) translate(0);
    }
}

/* Reponsive Design */
@screen sm {
}

@screen md {
  /* Social Share Button */
  .entry-sticky-shares {
    position: fixed;
    padding: 15px 2px 10px;
    text-align: center;
    top: 140px;
    left: 8%;
    width: 72px;
  }
  .entry-shares {
    display: block;
  }
  .entry-sticky-shares ul li.share-sum {
    margin-bottom: 10px;
  }
}


div.code-toolbar > .toolbar {
  right: 0.5em !important;
  opacity: 100 !important;
}

/* :not(pre) > code[class*='language-'], pre[class*='language-'] {
  @apply bg-gray-800;
} */
:not(pre) > code[class*='language-'],
pre[class*='language-'] {
  background: #1e293b !important;
  @apply rounded-xl;
}
.copy-to-clipboard-button{
  @apply uppercase py-1 px-3 rounded-md bg-gray-700 hover:bg-gray-600 text-xs tracking-wide text-gray-50 !important;
  font-size: 0.65rem  !important;
  letter-spacing:  0.1em !important;
}

